--- a/main.html
+++ b/main.html
@@ -8,6 +8,25 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+		<form>
+			<label for="name">Name</label>
+				<input type="text" id="name" placeholder="Name"><br>
+			<label for="phone">Phone Number</label>
+				<input type = "number" id="phone" placeholder="Phone Number"><br>
+			<label for="address">Address </label>
+				<input type ="textarea" id="address" placeholder="Address"><br>
+				<input type= "checkbox" id="checkbox" value="Have you ever lived with a Dog before?">
+			<label for="checkbox">Have you ever lived with a Dog before?</label>
+			<br>
+			<label for="multiSelect">Please select your preferred breeds</label>
+				<select id=multiSelect>
+					<option>Breed-1</option>
+					<option>Breed-2</option>
+					<option>Breed-3</option>
+				</select><br>
+			<input type="submit" id="submit" value="Submit">
+	</form>
+
     <script type="text/javascript" src="./script.js">
 </script>
 
