--- a/main.html
+++ b/main.html
@@ -12,9 +12,9 @@
 			<label for="name">Name</label>
 				<input type="text" id="name" placeholder="Name"><br>
 			<label for="phone">Phone Number</label>
-				<input type = "number" id="phone" placeholder="Phone Number"><br>
+				<input type = "text" id="phone" placeholder="Phone Number"><br>
 			<label for="address">Address </label>
-				<input type ="textarea" id="address" placeholder="Address"><br>
+				<input type ="text" id="address" placeholder="Address"><br>
 				<input type= "checkbox" id="checkbox" value="Have you ever lived with a Dog before?">
 			<label for="checkbox">Have you ever lived with a Dog before?</label>
 			<br>
